# BidInAction

./: .gitignore  CMakeLists.txt  FirstWindow.ui  README.md  interface.ui  interface_ui.py  main.py  main.spec  mainold.py  qt_core.py  requirements.txt  resultado.py  version.rc
components/: bid_details.py  bit_period.py  pdf_exporter.py  pick_up_location.py  search_filter.py  title.py  values_range.py
gui/windows/main_window/: ui_main_window.py
icon/: app_icon_convert.py
models/: bid_model.py  bid_period_model.py  bid_query_model.py  city_model.py  uf_model.py
script-inno-setup/: script-vitrine-caixa.iss
services/: request_service.py  requester.py  storage_service.py  workers.py
utils/: resources.py
views/: loader_dialog.py  result_window.py  search_window.py
